--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -34,8 +34,9 @@
         <com.wuxiantao.wxt.ui.custom.button.StateButton
             android:id="@+id/item_search_result_profit_buy"
             android:layout_width="@dimen/dp_112"
-            android:layout_height="@dimen/dp_19"
-            android:layout_marginTop="@dimen/dp_5"
+            android:layout_height="@dimen/dp_25"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10"
             android:layout_below="@id/item_search_result_title"
             app:radius="@dimen/dp_5"
             android:padding="0dp"
@@ -51,6 +52,7 @@
             android:layout_marginTop="@dimen/dp_6"
             app:radius="@dimen/dp_5"
             android:padding="0dp"
+            android:visibility="gone"
             app:unableTextColor="@color/white"
             app:unableBackgroundColor="#FAAD07"
             android:enabled="false"
