--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -177,6 +177,7 @@
     <color name="color_fe481e">#FE481E</color>
     <color name="color_fa5a5a">#FA5A5A</color>
     <color name="color_ff8684">#FF8684</color>
+    <color name="color_f9adac">#F9ADAC</color>
     <color name="color_f5f6f9">#F5F6F9</color>
     <color name="color_565961">#565961</color>
     <color name="color_2F3135">#2F3135</color>
