--- a/app/src/main/res/layout/activity_help_center.xml
+++ b/app/src/main/res/layout/activity_help_center.xml
@@ -12,13 +12,11 @@
         android:background="@color/white">
         <ImageView
             android:id="@+id/help_center_back"
-            android:layout_width="@dimen/dp_10"
+            android:layout_width="@dimen/dp_45"
             android:layout_height="@dimen/dp_15"
-            android:layout_marginLeft="@dimen/dp_10"
             android:layout_centerVertical="true"
             android:tint="@color/gray"
-            android:src="@mipmap/base_title_back"
-            android:layout_marginStart="@dimen/dp_10" />
+            android:src="@mipmap/base_title_back" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
