--- a/app/src/main/res/layout/item_taobao_featured_ver.xml
+++ b/app/src/main/res/layout/item_taobao_featured_ver.xml
@@ -36,8 +36,9 @@
             android:id="@+id/item_taobao_featured_buy_fanli"
             android:layout_below="@id/item_taobao_featured_title"
             android:layout_width="@dimen/dp_112"
-            android:layout_height="@dimen/dp_19"
-            android:layout_marginTop="@dimen/dp_5"
+            android:layout_height="@dimen/dp_25"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10"
             app:radius="@dimen/dp_5"
             android:padding="0dp"
             app:unableTextColor="@color/white"
@@ -52,6 +53,7 @@
             android:layout_below="@id/item_taobao_featured_buy_fanli"
             app:radius="@dimen/dp_5"
             android:padding="0dp"
+            android:visibility="gone"
             app:unableTextColor="@color/white"
             app:unableBackgroundColor="#FAAD07"
             android:enabled="false"
