--- a/app/src/main/res/layout/popupwindow_share_poster.xml
+++ b/app/src/main/res/layout/popupwindow_share_poster.xml
@@ -9,10 +9,12 @@
         android:alpha="0"/>
     <ImageView
         android:id="@+id/popup_share_poster_close"
-        android:layout_width="@dimen/dp_15"
-        android:layout_height="@dimen/dp_15"
-        android:tint="@color/white"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:tint="@color/color_898989"
         android:layout_marginTop="@dimen/dp_25"
+        android:paddingLeft="@dimen/dp_8"
+        android:paddingRight="@dimen/dp_8"
         android:layout_marginLeft="@dimen/dp_15"
         android:src="@mipmap/share_poster_close"/>
 
