--- a/app/src/main/res/layout/activity_mine_balance.xml
+++ b/app/src/main/res/layout/activity_mine_balance.xml
@@ -128,6 +128,7 @@
             android:paddingLeft="@dimen/dp_15"
             android:gravity="center_vertical"
             android:layout_marginTop="@dimen/dp_20"
+            android:visibility="gone"
             android:paddingRight="@dimen/dp_15"
             android:background="@color/white"
             android:layout_height="@dimen/dp_50">
