--- a/app/src/main/res/layout/activity_backpackexpansion.xml
+++ b/app/src/main/res/layout/activity_backpackexpansion.xml
@@ -18,6 +18,42 @@
         android:layout_marginLeft="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_14"
         android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_three"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="我拥有的数量："
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+
+
+        <TextView
+            android:id="@+id/tv_two"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="我使用的数量："
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+        <TextView
+            android:id="@+id/tv_four"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="暂存格子数量:"
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_14"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_one"
@@ -28,42 +64,7 @@
             android:textColor="@color/color_333"
             android:textSize="@dimen/sp_14" />
 
-        <TextView
-            android:id="@+id/tv_two"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="我使用的数量："
-            android:textColor="@color/color_333"
-            android:textSize="@dimen/sp_14" />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_12"
-        android:layout_marginTop="@dimen/dp_14"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_three"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="我拥有的数量："
-            android:textColor="@color/color_333"
-            android:textSize="@dimen/sp_14" />
-
-        <TextView
-            android:id="@+id/tv_four"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="暂存格子数量:"
-            android:textColor="@color/color_333"
-            android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
     <TextView
@@ -71,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_12"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/dp_14"
         android:text="扩容价格："
         android:textColor="@color/color_333"
