--- a/app/src/main/res/layout/fragment_scrapingcard.xml
+++ b/app/src/main/res/layout/fragment_scrapingcard.xml
@@ -137,7 +137,8 @@
                 <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                     android:id="@+id/nrv_info"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_10"/>
 
                 <TextView
                     android:layout_width="wrap_content"
