--- a/app/src/main/res/layout/item_scrapingcardfragment_a.xml
+++ b/app/src/main/res/layout/item_scrapingcardfragment_a.xml
@@ -20,6 +20,7 @@
             android:paddingRight="@dimen/dp_7">
 
             <TextView
+                android:id="@+id/tv_name_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/taskhall_text7"
@@ -66,6 +67,7 @@
             android:paddingRight="@dimen/dp_7">
 
             <TextView
+                android:id="@+id/tv_name_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/taskhall_text7"
@@ -120,6 +122,7 @@
             android:paddingRight="@dimen/dp_7">
 
             <TextView
+                android:id="@+id/tv_name_three"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/taskhall_text20"
@@ -186,8 +189,4 @@
                 android:textSize="@dimen/sp_12" />
         </RelativeLayout>
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_6"
-        android:background="@color/gray" />
 </LinearLayout>
