--- a/app/src/main/res/layout/layout_popupwindow_scrapcard_success.xml
+++ b/app/src/main/res/layout/layout_popupwindow_scrapcard_success.xml
@@ -76,6 +76,7 @@
             android:src="@drawable/scrap_card" />
 
         <LinearLayout
+            android:id="@+id/lt_shuangbei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_11"
@@ -126,7 +127,6 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:layout_marginRight="@dimen/dp_12"
             android:layout_marginBottom="@dimen/dp_10"
-            android:visibility="gone"
             />
     </LinearLayout>
 
