--- a/app/src/main/res/layout/layout_popupwindow_scrapcard_success.xml
+++ b/app/src/main/res/layout/layout_popupwindow_scrapcard_success.xml
@@ -125,6 +125,7 @@
             android:layout_height="@dimen/dp_111"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="@dimen/dp_12"
+            android:visibility="gone"
             android:layout_marginRight="@dimen/dp_12"
             android:layout_marginBottom="@dimen/dp_10"
             />
