--- a/app/src/main/res/layout/popupwindow_invited_code.xml
+++ b/app/src/main/res/layout/popupwindow_invited_code.xml
@@ -27,11 +27,20 @@
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:layout_gravity="center_horizontal"/>
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:textSize="@dimen/sp_12"
+           android:layout_marginLeft="@dimen/dp_10"
+           android:textColor="@color/white"
+           android:gravity="center"
+           android:layout_marginTop="@dimen/dp_10"
+           android:text="@string/share_desc"/>
        <LinearLayout
            android:id="@+id/popup_share_poster_share_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_marginTop="@dimen/dp_50"
+           android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <View
