--- a/app/src/main/res/layout/fragment_scrapingcard.xml
+++ b/app/src/main/res/layout/fragment_scrapingcard.xml
@@ -163,6 +163,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/dp_11"
                     android:layout_marginRight="@dimen/dp_11"
+                    android:visibility="gone"
                     android:layout_marginBottom="@dimen/dp_25"
                     android:text="@string/taskhall_text17"
                     android:textColor="@color/color_999"
