--- a/app/src/main/res/layout/item_scapingcard_a.xml
+++ b/app/src/main/res/layout/item_scapingcard_a.xml
@@ -2,12 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingRight="@dimen/dp_19">
+    android:orientation="vertical"
+
+    android:paddingRight="@dimen/dp_15">
 
     <ImageView
         android:id="@+id/iv_scapingcard_icon"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_61"
         android:scaleType="centerCrop" />
+    <TextView
+        android:id="@+id/itv_scapingcard_name"
+        android:layout_width="@dimen/dp_100"
+        android:gravity="center"
+        android:textSize="@dimen/dp_10"
+        android:textColor="@color/color_999"
+        android:layout_height="wrap_content">
+
+    </TextView>
 </LinearLayout>
