--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -239,7 +239,10 @@
         <item name="android:button">@null</item>
         <item name="android:layout_weight">1</item>
     </style>
-
+    <style name="MatchMatch">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
     <!--红色线条-->
     <style name="red_line_style">
         <item name="android:layout_width">@dimen/dp_3</item>
