--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -187,4 +187,5 @@
     <color name="color_b7b7b7">#B7B7B7</color>
     <color name="color_fb5654">#FB5654</color>
     <color name="color_ff8777">#FF8777</color>
+    <color name="color_edd2e0">#EDE2E0</color>
 </resources>
