--- a/app/src/main/res/layout/fragment_income_hall.xml
+++ b/app/src/main/res/layout/fragment_income_hall.xml
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -63,12 +64,12 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dp_15"
-                android:visibility="gone"
                 android:layout_marginTop="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
                 android:max="100"
                 android:progress="30"
-                android:progressDrawable="@drawable/progressbar_incomehallfrgment_a" />
+                android:progressDrawable="@drawable/progressbar_incomehallfrgment_a"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/income_hall_people_level"
@@ -78,9 +79,9 @@
                 android:layout_alignLeft="@+id/income_hall_progress1"
                 android:layout_marginTop="@dimen/dp_6"
                 android:text="@string/game_text3"
-                android:visibility="gone"
                 android:textColor="@color/white"
-                android:textSize="@dimen/sp_13" />
+                android:textSize="@dimen/sp_13"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_gameExperience"
@@ -89,26 +90,326 @@
                 android:layout_below="@+id/income_hall_progress1"
                 android:layout_alignRight="@+id/income_hall_progress1"
                 android:layout_marginTop="@dimen/dp_6"
-                android:visibility="gone"
                 android:text="距离下一等级还差 542 点经验"
                 android:textColor="@color/white"
-                android:textSize="@dimen/sp_10" />
+                android:textSize="@dimen/sp_10"
+                android:visibility="gone" />
         </RelativeLayout>
-
-        <com.youth.banner.Banner
-            android:id="@+id/income_hall_banner"
-            android:layout_width="@dimen/dp_330"
-            android:layout_height="@dimen/dp_140"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dp_148"
-            app:indicator_height="@dimen/dp_8"
-            app:indicator_width="@dimen/dp_8"
-            app:is_auto_play="true" />
     </RelativeLayout>
+
+    <com.youth.banner.Banner
+        android:id="@+id/income_hall_banner"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_168"
+        app:indicator_height="@dimen/dp_8"
+        app:indicator_width="@dimen/dp_8"
+        app:is_auto_play="true" />
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_2"
+        android:background="@drawable/main_scrapcard_background_boder"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/dp_16"
+        android:paddingTop="@dimen/dp_16"
+        android:paddingRight="@dimen/dp_16"
+        android:paddingBottom="@dimen/dp_9">
+
+        <TextView
+            android:id="@+id/tv_name_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="150级永久分红"
+            android:textColor="@color/color_3a3a3a"
+            android:textSize="@dimen/sp_12" />
+
+        <TextView
+            android:id="@+id/tv_cha"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_7"
+            android:layout_toRightOf="@+id/tv_name_one"
+            android:text="距离享受平台30%永久分红，只差110级！"
+            android:textColor="@color/color_999"
+            android:textSize="@dimen/sp_11" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_name_one"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="参与分红人数"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="今日分红金额"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_mytoday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:id="@+id/tv_today_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="我的今日分红"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginRight="@dimen/dp_16"
+                android:layout_weight="1.3"
+                android:gravity="right"
+                android:orientation="vertical">
+
+                <com.wuxiantao.wxt.ui.custom.progress.CircleProgressBar
+                    android:id="@+id/circleIndicator_a"
+                    android:layout_width="@dimen/dp_62"
+                    android:layout_height="@dimen/dp_62"
+                    android:visibility="gone"
+                    app:maxx="100"
+                    app:progress="0"
+                    app:progressBackgroundColor="@color/color_edd2e0"
+                    app:progressColor="@color/color_fb5e58"
+                    app:progressStrokeWidth="@dimen/dp_4"
+                    app:progressTextColor="@color/color_fb5e58"
+                    app:progressTextSize="@dimen/sp_16" />
+
+                <TextView
+                    android:id="@+id/tv_round_text"
+                    android:layout_width="@dimen/dp_62"
+                    android:layout_height="@dimen/dp_62"
+                    android:text="开始分红"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    android:background="@drawable/shape_round_main"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_2"
+        android:background="@drawable/main_scrapcard_background_boder"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/dp_16"
+        android:paddingTop="@dimen/dp_16"
+        android:paddingRight="@dimen/dp_16"
+        android:paddingBottom="@dimen/dp_20">
+
+        <TextView
+            android:id="@+id/tv_name_onex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="每50级体验分红"
+            android:textColor="@color/color_3a3a3a"
+            android:textSize="@dimen/sp_12" />
+
+        <TextView
+            android:id="@+id/tv_chax"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_7"
+            android:layout_toRightOf="@+id/tv_name_onex"
+            android:text="距离享受下一次的体验分红，只差10级！"
+            android:textColor="@color/color_999"
+            android:textSize="@dimen/sp_11" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_name_onex"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_numx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="今日体验人数"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_amountx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="今日分红体验金额"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_weight="1"
+
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_mytodayx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_15" />
+
+                <TextView
+                    android:id="@+id/tv_today_moneyx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="我的体验分红"
+                    android:textColor="@color/color_3a3a3a"
+                    android:textSize="@dimen/sp_10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_weight="0.9"
+                android:gravity="right"
+                android:orientation="vertical">
+
+                <com.wuxiantao.wxt.ui.custom.progress.CircleProgressBar
+                    android:id="@+id/circleIndicator_b"
+                    android:layout_width="@dimen/dp_62"
+                    android:layout_height="@dimen/dp_62"
+                    android:visibility="gone"
+                    app:maxx="100"
+                    app:progress="0"
+                    app:progressBackgroundColor="@color/color_edd2e0"
+                    app:progressColor="@color/color_fb5e58"
+                    app:progressStrokeWidth="@dimen/dp_4"
+                    app:progressTextColor="@color/color_fb5e58"
+                    app:progressTextSize="@dimen/sp_16" />
+
+                <TextView
+                    android:id="@+id/tv_round_text_2"
+                    android:layout_width="@dimen/dp_62"
+                    android:layout_height="@dimen/dp_62"
+                    android:background="@drawable/shape_round_main"
+                    android:text="开始分红"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    android:visibility="gone" />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/income_hall_rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         app:srlAccentColor="#00000000"
         app:srlPrimaryColor="#00000000">
 
@@ -150,8 +451,8 @@
                 <RelativeLayout
                     android:id="@+id/rl_income_profit"
                     android:layout_width="match_parent"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_benefit_title"
@@ -217,11 +518,13 @@
                         android:textColor="@color/color_636363"
                         android:textSize="@dimen/sp_13" />
                 </RelativeLayout>
+
                 <LinearLayout
                     android:id="@+id/ll_income_profit"
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <ProgressBar
                         android:id="@+id/income_hall_progress2"
                         style="?android:attr/progressBarStyleHorizontal"
@@ -236,10 +539,12 @@
                         android:max="100"
                         android:progress="0"
                         android:progressDrawable="@drawable/progressbar_bg_divided_dragon" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
                         <TextView
                             android:id="@+id/tv_current_leave"
                             android:layout_width="wrap_content"
@@ -257,13 +562,14 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/income_hall_progress2"
                             android:layout_alignParentRight="true"
-                            android:gravity="right"
                             android:layout_marginTop="@dimen/dp_13"
                             android:layout_marginRight="@dimen/dp_24"
+                            android:gravity="right"
                             android:text="距离平台分红还差150级"
                             android:textColor="@color/color_999"
                             android:textSize="@dimen/sp_12" />
                     </LinearLayout>
+
                     <TextView
                         android:id="@+id/income_hall_experience"
                         android:layout_width="match_parent"
@@ -272,13 +578,12 @@
                         android:layout_marginLeft="@dimen/dp_43"
                         android:layout_marginTop="@dimen/dp_33"
                         android:layout_marginRight="@dimen/dp_43"
-                        android:padding="0dp"
-                        android:gravity="center"
-                        android:textColor="@color/white"
-                        android:text="@string/click_dividend_experience"
                         android:background="@drawable/base_title_bg_white_red_cercle_25dp"
-                        android:textSize="@dimen/sp_15"
-                        />
+                        android:gravity="center"
+                        android:padding="0dp"
+                        android:text="@string/click_dividend_experience"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_15" />
                 </LinearLayout>
 
             </LinearLayout>
