--- a/app/src/main/res/layout/fragment_scrapingcard.xml
+++ b/app/src/main/res/layout/fragment_scrapingcard.xml
@@ -42,15 +42,16 @@
                     android:background="@color/white"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:paddingLeft="@dimen/dp_22"
+                    android:paddingLeft="@dimen/dp_16"
                     android:paddingTop="@dimen/dp_15"
-                    android:paddingRight="@dimen/dp_22"
+                    android:paddingRight="@dimen/dp_16"
                     android:paddingBottom="@dimen/dp_15">
 
                     <TextView
                         android:id="@+id/tv_mypack"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dp_6"
                         android:layout_weight="1"
                         android:drawableTop="@drawable/main_scrapcard_pack"
                         android:drawablePadding="@dimen/dp_4"
@@ -63,10 +64,12 @@
                         android:id="@+id/tv_my_heroscroll"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dp_6"
                         android:layout_weight="1"
                         android:drawableTop="@drawable/main_scrapcard_hero"
                         android:drawablePadding="@dimen/dp_4"
                         android:gravity="center"
+
                         android:text="@string/pointtocard_text9"
                         android:textColor="@color/color_999"
                         android:textSize="@dimen/sp_12" />
@@ -75,10 +78,12 @@
                         android:id="@+id/tv_help"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dp_6"
                         android:layout_weight="1"
                         android:drawableTop="@drawable/main_scrapcard_order"
                         android:drawablePadding="@dimen/dp_4"
                         android:gravity="center"
+
                         android:text="@string/pointtocard_text21"
                         android:textColor="@color/color_999"
                         android:textSize="@dimen/sp_12" />
@@ -159,13 +164,14 @@
                     android:layout_marginBottom="@dimen/dp_23"
                     android:paddingLeft="@dimen/dp_10"
                     android:paddingRight="@dimen/dp_14">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/taskhall_text18"
-                        android:textColor="@color/color_3a3a3a"
                         android:drawableLeft="@drawable/main_scrapcard_line"
                         android:drawablePadding="@dimen/dp_2"
+                        android:text="@string/taskhall_text18"
+                        android:textColor="@color/color_3a3a3a"
                         android:textSize="@dimen/sp_15" />
 
                     <TextView
