--- a/app/src/main/res/layout/item_my_information.xml
+++ b/app/src/main/res/layout/item_my_information.xml
@@ -20,7 +20,7 @@
             android:textSize="@dimen/sp_16"
             android:textColor="@color/black"
             android:layout_gravity="center_vertical"/>
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/item_my_information_prize_icon"
             android:layout_width="@dimen/dp_25"
             android:layout_height="@dimen/dp_25"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="@dimen/dp_8"
             android:src="@mipmap/prize_icon"
             android:visibility="gone"
-            android:layout_marginStart="@dimen/dp_8" />
+            android:layout_marginStart="@dimen/dp_8" />-->
         <TextView
             android:id="@+id/item_my_information_prize_money"
             android:layout_width="wrap_content"
