--- a/app/src/main/res/layout/item_scrapingcardfragment_a.xml
+++ b/app/src/main/res/layout/item_scrapingcardfragment_a.xml
@@ -135,6 +135,7 @@
                     android:minHeight="@dimen/dp_62"
                     app:maxx="100"
                     app:progress="0"
+                    app:progressRadius="@dimen/dp_26"
                     app:progressBackgroundColor="@color/color_edd2e0"
                     app:progressColor="@color/color_fb5e58"
                     app:progressStrokeWidth="@dimen/dp_4"
@@ -145,10 +146,11 @@
                     android:id="@+id/tv_round_text_scrap"
                     android:layout_width="@dimen/dp_62"
                     android:layout_height="@dimen/dp_62"
+                    android:gravity="center"
                     android:background="@drawable/shape_round_main"
                     android:text="开始分红"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/sp_16"
+                    android:textSize="@dimen/sp_12"
                     android:visibility="gone" />
 
             </LinearLayout>
