--- a/app/src/main/res/layout/activity_balance_withdraw.xml
+++ b/app/src/main/res/layout/activity_balance_withdraw.xml
@@ -5,16 +5,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.wuxiantao.wxt.ui.title.CNToolbar
-        android:id="@+id/fragment_member_center_toolbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cn_leftImage="@mipmap/base_title_back"
-        app:cn_titleText="@string/mine_text3" />
+        android:layout_height="@dimen/dp_70"
+        android:background="@drawable/base_title_background"
+        >
+
+        <ImageView
+            android:id="@+id/mine_balancewithdraw_back"
+            android:layout_width="@dimen/dp_70"
+            android:layout_height="@dimen/dp_50"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingTop="@dimen/dp_15"
+            android:scaleType="center"
+            android:layout_centerVertical="true"
+            android:paddingRight="@dimen/dp_35"
+            android:src="@mipmap/base_title_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_50"
+            android:gravity="center"
+            android:paddingTop="@dimen/dp_15"
+
+            android:layout_centerInParent="true"
+            android:text="@string/mine_text3"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_16" />
+    </RelativeLayout>
 
     <com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -157,7 +180,7 @@
                     </RelativeLayout>
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
+                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                     android:id="@+id/balance_with_draw_money_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,7 +190,7 @@
             </LinearLayout>
 
 
-            <android.support.v7.widget.RecyclerView
+            <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                 android:id="@+id/balance_with_draw_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
