--- a/app/src/main/res/layout/item_scrapingcardfragment_a.xml
+++ b/app/src/main/res/layout/item_scrapingcardfragment_a.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/lt_detail"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -113,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_20"
-                    android:text="我的今日分红"
+                    android:text="我的昨日分红"
                     android:textColor="@color/color_3a3a3a"
                     android:textSize="@dimen/sp_11" />
             </LinearLayout>
@@ -147,6 +148,7 @@
                     android:layout_width="@dimen/dp_62"
                     android:layout_height="@dimen/dp_62"
                     android:gravity="center"
+                    android:singleLine="true"
                     android:background="@drawable/shape_round_main"
                     android:text="开始分红"
                     android:textColor="@color/white"
