--- a/app/src/main/res/layout/popupwindow_img.xml
+++ b/app/src/main/res/layout/popupwindow_img.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/popup_img_img"
         android:layout_width="@dimen/dp_320"
-        android:layout_height="@dimen/dp_320"
+        android:layout_height="520dp"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"/>
 
