隐藏版本发布

--- a/app/src/main/res/layout/activity_balance_details.xml
+++ b/app/src/main/res/layout/activity_balance_details.xml
@@ -23,6 +23,7 @@
                 android:tint="@color/gray"
                 android:layout_centerVertical="true"/>
             <TextView
+                android:id="@+id/tv_detail"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="@dimen/sp_18"
